--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -27,6 +27,14 @@
                 <a class="btn btn-right" href="#sharedialog">
                     <i class="material-icons">link</i> Share
                 </a>
+
+            </div>
+            <div>
+                <a class="btn btn-right"  href="@Url.Action("View", "History", new {id = Model.Id})">
+                    <i class="material-icons">audiotrack</i>    Tune in live    
+                </a>
+
+                
             </div>
             <p class="nomargintop textshadow">@Model.Description</p>
 
@@ -95,6 +103,7 @@
             <i id="footerIcon" class="material-icons">keyboard_arrow_up</i>
         </div>
         <i id="fullscreenbutton" class="material-icons">fullscreen</i>
+        
         <table style="width: 100%; margin-top: -15px">
             <tr>
                 <td style="width: 5%">
@@ -112,7 +121,7 @@
             </tr>
 
         </table>
-
+        
     </div>
 </div>
 
@@ -226,9 +235,7 @@
                 cue_and_play(data, startSeconds+2);
             }
         }
-        play.client.joinGroup = function() {
-
-        }
+       
         function cue_and_play(data, seconds){
             player.cueVideoById(data.TrackId, seconds, "small");
             document.getElementById("nowPlaying").innerHTML = data.Title + ' - ' + data.Artist;
