--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -549,6 +549,23 @@ header {
     #results li.track .tracktitle {
       display: block; }
 
+#resultsPlaylist {
+  padding: 0; }
+  #resultsPlaylist li.playlist {
+    margin: 1em;
+    display: block;
+    min-height: 128px;
+    clear: both; }
+    #resultsPlaylist li.playlist img {
+      height: 128px;
+      display: inline-block;
+      float: left;
+      margin-right: .7em; }
+    #resultsPlaylist li.playlist .artist {
+      padding-top: .4em;
+      display: block;
+      font-weight: 700; }
+
 .input-validation-error {
   border: 1px solid #ff0000;
   background-color: #ffeeee; }
@@ -646,13 +663,4 @@ footer {
     text-decoration: underline;
     min-width: 150px;
     font-size: 1.1em; }
-
-#sharedialog {
-  display: block; }
-  #sharedialog #facebook img {
-    display: initial !important; }
-  #sharedialog #twitter img {
-    display: initial !important; }
-  #sharedialog #gplus img {
-    display: initial !important; }
 
