--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -150,7 +150,7 @@ header {
             border-radius: 5px;
             font-weight: 100;
             margin-right: .3em;
-
+            margin-bottom:0.5em;
             &:hover {
                 background: rgba(255, 255, 255, 0.2);
             }
@@ -873,3 +873,57 @@ footer {
     background-size: cover;
     background-position: center center;
 }
+
+.card{
+      background-color:white;
+        padding:25px 50px;
+        margin:25px;
+}
+
+.chart{
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  position: relative;
+  //box-sizing:border-box;
+  text-align:center;
+  span{
+      display:block;
+    font-size: 2em;
+    font-weight: normal;
+    vertical-align:middle;
+  }
+
+.chart-text{
+     padding-top:60%;
+}
+
+  canvas{
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+
+.flex-container {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding:20px;
+    }
+
