--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -778,7 +778,9 @@ header {
 .btn-left {
     float: left;
 }
-
+.btn-social{
+    width: 133px;
+}
 .btn-login {
     width: 270px;
     height: 3em;
