--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -20,7 +20,7 @@
                     <h1>Playlist</h1>@Model.Name
                 </div>
 
-                <a class="btn btn-right" style="margin-left: .5em" href="@Url.Action("View", "History", new {id = Model.Id})">
+                <a class="btn btn-right" style="margin-left: .5em" href="@Url.Action("View", "History", new { id = Model.Id })">
                     <i class="material-icons">history</i> History
                 </a>
 
@@ -38,13 +38,13 @@
         </div>    
 </div>}    
 
-<div class="col-md-9">
+<div class="col-md-9" id="playlistTable">
 <div id="playlist-view" style="margin-top: 1em;">
     @Html.Partial("PlaylistTable", @Model)
 </div>
 
 <div id="nowPlayingRow" style="margin-top: 5em">
-    @if (((List<User>) ViewBag.Organisers).Any(p => p.Email == User.Identity.Name))
+    @if (((List<User>)ViewBag.Organisers).Any(p => p.Email == User.Identity.Name))
     {
         if (Model.PlaylistTracks.Count != 0)
         {
@@ -83,12 +83,20 @@
 </div>
 </div>
 
-<div class="container col-md-3" style="background-color:#262626 ; color:white; margin-top: -32px; height:100%; position:absolute; right:0">
-        <input type="text" class="custom-input" id="message" style="margin-top: 10px"/>
-        <input type="button" id="sendmessage" value="Send" class="btn-chat"/>
+<div class="container col-md-3" id="chatContainer" style="background-color:#262626 ; color:white; margin-top: -32px; height:70%; position:absolute; right:0;">
+  <div class="col-xs-1" id="chatArrow" style="position:absolute; top:50%; cursor:pointer; padding-right:0px">
+          <i id="chatIcon" class="material-icons" style="margin-left:-27px">keyboard_arrow_right</i>
+  </div>
+  <div class="col-xs-11" id="chatContent" style="height:100%; padding-right:0px">    
         <input type="hidden" id="displayname" value="@ViewBag.CurrentUser.Nickname"/>
         <input type="hidden" id="image" value="/Content/img/Users/@ViewBag.CurrentUser.ImageUrl" />
         <ul id="discussion" style="list-style:none; padding-left:0"></ul>
+    @{if(Request.IsAuthenticated){
+      <div id ="sendChat" style="position:absolute; bottom:0; margin-bottom:20px;">
+        <input type="text" class="custom-input" id="message" style="width:247px"/>
+        <input type="button" id="sendmessage" value="Send" class="btn-chat" style="margin-left:10px"/>
+    </div>} }
+  </div>
 </div>
 
 <div id="footerSlideContainer">
@@ -147,7 +155,10 @@
            chat.client.broadcastMessage = function (name, message, image) {
                var encodedName = $('<div />').text(name).html();
                var encodedMsg = $('<div />').text(message).html();
-               $('#discussion').append('<li style="min-height:60px; margin-top:5px; margin-bottom:5px"><div class="col-md-2" style="padding-right:0;"> <img src="' + image + '" id="thumbnail" class="round" style="height:50px; width: 50px;" /></div><div class="col-md-10"><strong>' + encodedName
+               if (image == "/Content/img/Users/"){
+                   image = "/Content/img/default-avatar.png"
+               }
+               $('#discussion').append('<li style="min-height:60px;"><div class="col-md-2" id="imagesChat" style="padding-left:0px; padding-right:0px"> <img src="' + image + '" id="thumbnail" class="round" style="height:50px; width:50px;"/></div><div class="col-md-10" id="textChat"><strong>' + encodedName
                    + '</strong><br />' + encodedMsg + '</div></li>');
            };
            $('#message').focus();
@@ -157,7 +168,6 @@
                $('#sendmessage').click(function () {
                    chat.server.send($('#displayname').val(), $('#message').val(),$('#image').val(),(@Model.Id));
                    $('#message').val('').focus();
-                   alert($('#image').val())
                });
            });
        });
@@ -255,6 +265,38 @@
         }
         var playing = false;
         var footerOpen = false;
+        var chatOpen = true;
+
+        jQuery(function($){
+            $('#chatArrow').click(function(){
+                if(chatOpen ===false){
+                    openChat();
+                    chatOpen = true;
+                } 
+                else{
+                closeChat()
+                chatOpen = false;
+                };
+            })
+        });
+        
+        function openChat(){
+            $("#chatContainer").animate({width: $('#chatContainer').data('width')});
+            $("#chatContent").show();
+            $('#playlistTable').removeClass('col-lg-12');
+            $('#playlistTable').addClass('col-lg-9');
+            chatIcon.innerHTML = 'keyboard_arrow_right';
+        }
+
+        function closeChat(){
+            $('#chatContainer').data('width', $('#chatContainer').css('width'));
+            $("#chatContent").hide();
+            $('#chatContainer').animate({ width: '10px'});
+            $('#playlistTable').removeClass('col-lg-9');
+            $('#playlistTable').addClass('col-lg-12');
+            chatIcon.innerHTML = 'keyboard_arrow_left';
+        }   
+
         jQuery(function($) {
             $('#footertop').click(function () {
                 if(footerOpen === false) {
@@ -275,6 +317,7 @@
 
         function openFooter() {
             $('#footerSlideContent').animate({ height: '125px' });
+            $('#sendChat').animate({ marginBottom: '145px' });    
             $(this).css('backgroundPosition', 'bottom left');
             $('#bottommargin').animate({ marginBottom: '9em' }, 500, null);
             footerOpen = true;
@@ -284,6 +327,7 @@
 
         function closeFooter() {
             $('#footerSlideContent').animate({ height: '20px' });
+            $('#sendChat').animate({ marginBottom: '20px' }); 
             $(this).css('backgroundPosition', 'top left');
             $('#bottommargin').animate({ marginBottom: '3em' }, 500, null);
             footerOpen = false;
