--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -120,6 +120,18 @@ header {
       margin-bottom: 0.5em; }
       #banner .content .button:hover {
         background: rgba(255, 255, 255, 0.2); }
+    #banner .content .btn-chat {
+      display: inline-block;
+      border: 2px solid #fff;
+      background: transparent;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1.8em;
+      padding: .2em 1em;
+      text-transform: lowercase;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 100; }
     @media screen and (max-width: 600px) {
       #banner .content {
         padding: 4% 1em 3em 1em; }
